@@ -10,6 +10,7 @@ gem 'asciidoctor-diagram', ENV['ASCIIDOCTOR_DIAGRAM_VERSION'], require: false if
 gem 'asciidoctor-kroki', ENV['ASCIIDOCTOR_KROKI_VERSION'], require: false if ENV.key? 'ASCIIDOCTOR_KROKI_VERSION'
 gem 'coderay', '~> 1.1.0', require: false
 gem 'ffi-icu', ENV['FFI_ICU_VERSION'], require: false if ENV.key? 'FFI_ICU_VERSION'
+gem 'logger', require: false if (Gem::Version.new RUBY_VERSION) > (Gem::Version.new '3.3.4')
 gem 'open-uri-cached', '~> 1.0.0', require: false
 gem 'prawn-gmagick', ENV['PRAWN_GMAGICK_VERSION'], require: false if (ENV.key? 'PRAWN_GMAGICK_VERSION') && RUBY_ENGINE == 'ruby'
 gem 'pygments.rb', ENV['PYGMENTS_VERSION'], require: false if ENV.key? 'PYGMENTS_VERSION'
@@ -36,5 +37,6 @@ end
 
 group :coverage do
   gem 'deep-cover-core', '~> 1.1.0', require: false
+  gem 'json', '~> 2.7', require: false if (Gem::Version.new RUBY_VERSION) > (Gem::Version.new '3.3.4')
   gem 'simplecov', '~> 0.22.0', require: false
 end
